fixed horizontal overflow on mobile

--- a/styles/global.css
+++ b/styles/global.css
@@ -12,16 +12,18 @@
 
 html {
     height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 body {
+    position: relative;
     width: 100vw;
     height: 100vh;
     background: black;
     display: flex;
     margin: 0;
     flex-direction: column;
+    overflow-x: hidden;
 }
 
 #wrapper {
