--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,6 @@
 #content {
     position: absolute;
+    top: 0;
     height: 100vh;
     width: 100%;
     perspective: 1px;
@@ -14,6 +15,7 @@
     width: 100%;
     background-color: transparent;
     display: flex;
+    align-items: center;
     justify-content: center;
     z-index: -1;
     transform-style: preserve-3d;
@@ -22,7 +24,7 @@
 #div-1::before {
     content: "";
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     position: absolute;
     background: url("../resources/biking.jpg") top center;
     background-size: cover;
@@ -33,7 +35,6 @@
     position: absolute;
     color: white;
     text-shadow: 0.05em 0.05em 0.2em black;
-    top: 40%;
     text-align: center;
     font-size: min(10vw, 64px);
     font-weight: 450;
